# dev/src/modules/projects/projects.controller.ts
@@ -13,11 +13,14 @@ import { CreateProjectDto } from './dto/createProjects.dto';
 import { ProjectsService } from './projects.service';
 import { GetProjectsDto } from 'src/modules/projects/dto/getProjects.dto';
 import {
+  CreateProjectResponseDto,
   DeleteProjectResponseDto,
   GetProjectByIdResponseDto,
   GetProjectsResponseDto,
 } from 'src/modules/projects/dto/response.dto';
 import { GetProjectByIdDto } from 'src/modules/projects/dto/getProjectById.dto';
+import { ErrorResponseDto } from 'src/modules/auth/dto/response.dto';
+import { ApiResponse } from '@nestjs/swagger';
 
 @Controller()
 @UseGuards(JwtAuthGuard)
@@ -25,6 +28,26 @@ export class ProjectsController {
   constructor(private readonly projectsService: ProjectsService) {}
 
   @Get('getProjects')
+  @ApiResponse({
+    status: 200,
+    description: 'Projects',
+    type: GetProjectsResponseDto,
+  })
+  @ApiResponse({
+    status: 401,
+    description: 'Unauthorized',
+    type: ErrorResponseDto,
+  })
+  @ApiResponse({
+    status: 400,
+    description: 'Validation error',
+    type: ErrorResponseDto,
+  })
+  @ApiResponse({
+    status: 409,
+    description: 'User with this email already exists',
+    type: ErrorResponseDto,
+  })
   async getProjects(
     @Query() getProjectsDto: GetProjectsDto,
   ): Promise<GetProjectsResponseDto> {
@@ -34,6 +57,26 @@ export class ProjectsController {
   }
 
   @Get('getProject/:id')
+  @ApiResponse({
+    status: 200,
+    description: 'Project',
+    type: GetProjectByIdResponseDto,
+  })
+  @ApiResponse({
+    status: 401,
+    description: 'Unauthorized',
+    type: ErrorResponseDto,
+  })
+  @ApiResponse({
+    status: 400,
+    description: 'Validation error',
+    type: ErrorResponseDto,
+  })
+  @ApiResponse({
+    status: 409,
+    description: 'User with this email already exists',
+    type: ErrorResponseDto,
+  })
   async getProjectById(
     @Body() getProjectByIdDto: GetProjectByIdDto,
   ): Promise<GetProjectByIdResponseDto> {
@@ -43,11 +86,51 @@ export class ProjectsController {
   }
 
   @Post('createProject')
+  @ApiResponse({
+    status: 200,
+    description: 'Project created successfully',
+    type: CreateProjectResponseDto,
+  })
+  @ApiResponse({
+    status: 401,
+    description: 'Unauthorized',
+    type: ErrorResponseDto,
+  })
+  @ApiResponse({
+    status: 400,
+    description: 'Validation error',
+    type: ErrorResponseDto,
+  })
+  @ApiResponse({
+    status: 409,
+    description: 'User with this email already exists',
+    type: ErrorResponseDto,
+  })
   createProject(@Body() createProjectDto: CreateProjectDto) {
     return this.projectsService.createProject(createProjectDto);
   }
 
   @Delete('deleteProject/:id')
+  @ApiResponse({
+    status: 200,
+    description: 'Project deleted successfully',
+    type: DeleteProjectResponseDto,
+  })
+  @ApiResponse({
+    status: 401,
+    description: 'Unauthorized',
+    type: ErrorResponseDto,
+  })
+  @ApiResponse({
+    status: 400,
+    description: 'Validation error',
+    type: ErrorResponseDto,
+  })
+  @ApiResponse({
+    status: 409,
+    description: 'User with this email already exists',
+    type: ErrorResponseDto,
+  })
   async deleteProject(
     @Body() deleteProjectDto: DeleteProjectDto,
   ): Promise<DeleteProjectResponseDto> {
